# splunk-demo

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml
.github/workflows/: test.yml
demo-container/: Dockerfile  entrypoint.sh  motd  settings.json
demo-container/scenarios/: devops.md  management.md  search.md  sre.md  support.md
landing-page/: Dockerfile  index.html  nginx.conf  queue-client.js  styles.css  unauthorized.html
log-generator/: Dockerfile  generator.py  requirements.txt
log-generator/tests/: __init__.py  test_generator.py
nginx/: demo.conf  demo.dev.conf  locations.include  nginx.conf  upstreams.include
observability/: grafana-dashboards.yaml  promtail-config.yaml
observability/dashboards/: demo-home.json
observability/loki/: config.yaml
observability/mimir/: config.yaml
observability/promtail/: config.yaml
queue-manager/: .dockerignore  Dockerfile  eslint.config.js  instrumentation.js  package-lock.json  package.json  server.js
queue-manager/config/: index.js  metrics.js
queue-manager/handlers/: websocket.js
queue-manager/routes/: health.js  scenarios.js  session.js
queue-manager/services/: invite.js  queue.js  session.js  state.js
seed-data/: Dockerfile  requirements.txt  seed_splunk.py
shared/: pyproject.toml
shared/splunk_events/: __init__.py  generators.py  hec_client.py  templates.py
shared/tests/: __init__.py  test_generators.py  test_hec_client.py
webhook-catcher/: Dockerfile  server.py
(+21 files in other folders)
