[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "splunk-events"
version = "1.0.0"
description = "Shared Splunk event generation library for demo"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.28.0",
    "faker>=18.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.setuptools.packages.find]
where = ["."]
